Furious battle to get cube working